--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-
+body {
+  background-color: rgb(0, 0, 0);
+}
 ul.topnav {
   list-style-type: none;
   margin: 0;
@@ -64,9 +66,92 @@ ul.topnav li.right {float: right;}
 }
 
 .habilidades {
-  background-image: linear-gradient( #040003 , #3d0336);
+  margin-top: -10px;
+  /* background-color: #140115; */
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  border: #e51ddf;
+  margin-bottom: 3%;
   
-
   
 }
 
+.progress-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: rgb(209, 40, 91) !important;
+  transition: width .6s ease;
+  
+}
+
+
+.progress {
+    height: 10px;
+    margin-bottom: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+    overflow: hidden;
+    background-color: rgb(96 20 45 / 31%);
+    border-radius: 4px;
+    box-shadow: rgba(87, 16, 63, 0.932) 2px 2px 2px inset;
+
+}
+
+.habilidades h4{
+  font-size: 15px;
+  color: beige;
+ text-align: end;
+ margin-right: 10%;
+}
+.habilidades .row{
+  margin-top: 5%;
+  border-radius: 14px;
+  box-shadow: 0 4px 8px 0 rgba(172, 25, 69), 0 6px 20px 0 rgba(172, 25, 69);
+  padding-bottom: 2%;
+  /* box-shadow: rgb(172 25 69) 1px -5px 20px 0px, rgb(172 25 69) 0px 6px 20px 0px; */
+  
+}
+
+.habilidades .row {
+  width: 100%;
+  height: 100%;
+}
+.habilidades h2 {
+  color:rgb(195, 123, 135);
+}
+.habilidades  p {
+  color:rgb(195, 123, 135);
+  font-size: 15px;
+}
+
+#panel, #flip {
+  padding: 5px;
+  text-align: center;
+  background-color: #000;
+  border: transparent;
+  margin-left: 4%;
+  color:rgb(243, 20, 195);
+}
+
+#panel {
+  padding: 50px;
+  display: none;
+  font-size: 17px;
+  color: beige;
+}
+
+.habilidades img {
+  height: 19rem;
+  width: 19rem;
+  border-radius: 50%;
+  margin: 0.9rem 0 0 0;
+  float: center;
+  margin-bottom: 5%;
+  /* box-shadow: 0 4px 4px 0 rgb(172 25 69), -1px 1px 12px 5px rgb(172 25 69); */
+}
