--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,12 @@ ul.topnav li.right {float: right;}
   margin-bottom: 5%;
   /* box-shadow: 0 4px 4px 0 rgb(172 25 69), -1px 1px 12px 5px rgb(172 25 69); */
 }
+
+
+
+
+
+
+.footer {
+  color: #fff;
+}
