--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ ul.topnav {
   padding: 0;
   overflow: hidden;
   background-color: rgb(0, 0, 0);
+  padding-left: 5%;
 }
 
 ul.topnav li {float: right;}
@@ -66,13 +67,12 @@ ul.topnav li.right {float: right;}
 }
 
 .habilidades {
-  margin-top: -10px;
+  margin-top: 10px;
   /* background-color: #140115; */
   text-align: center;
   width: 100%;
   height: 100%;
-  border: #e51ddf;
-  margin-bottom: 3%;
+  margin-bottom: 10px;
   
   
 }
@@ -85,7 +85,7 @@ ul.topnav li.right {float: right;}
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: rgb(209, 40, 91) !important;
+  background-color: rgb(228, 60, 177) !important;
   transition: width .6s ease;
   
 }
@@ -99,7 +99,7 @@ ul.topnav li.right {float: right;}
     overflow: hidden;
     background-color: rgb(96 20 45 / 31%);
     border-radius: 4px;
-    box-shadow: rgba(87, 16, 63, 0.932) 2px 2px 2px inset;
+    box-shadow: rgb(228, 60, 177) 2px 2px 2px inset;
 
 }
 
@@ -112,7 +112,7 @@ ul.topnav li.right {float: right;}
 .habilidades .row{
   margin-top: 5%;
   border-radius: 14px;
-  box-shadow: 0 4px 8px 0 rgba(172, 25, 69), 0 6px 20px 0 rgba(172, 25, 69);
+  box-shadow: 0 4px 8px 0 rgb(228, 60, 177), 0 6px 20px 0 rgb(228, 60, 177);
   padding-bottom: 2%;
   /* box-shadow: rgb(172 25 69) 1px -5px 20px 0px, rgb(172 25 69) 0px 6px 20px 0px; */
   
@@ -164,4 +164,5 @@ ul.topnav li.right {float: right;}
 footer {
   color: #fff;
   text-align: center;
+  margin-top: 6%;
 }
