--- a/Projetos/estiloProjeto.css
+++ b/Projetos/estiloProjeto.css
@@ -1,42 +1,123 @@
+/* Flex styles -------------------------------------------------*/
 
-.container {
-  position: relative;
-  width: 20%;
-  height: 70%;
- }
+body {
+  background-color: rgb(0, 0, 0);
+}
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+  padding-left: 5%;
+}
 
-.image {
-  opacity: 1;
+ul.topnav li {
+  float: right;
+}
+
+ul.topnav li a {
   display: block;
-  width: 10%;
-  height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
-  border-radius: 10%;
-}
-
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  color: white;
   text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.container:hover .image {
+ul.topnav li a:hover:not(.active) {
+  background-color: rgb(228, 60, 177);
+}
+
+ul.topnav li.right {
+  float: right;
+}
+.logo {
+  height: 50px;
+  margin-right: 20px;
+}
+
+@media (min-width: 700px) {
+  .leading {
+    display: flex;
+    align-items: center;
+  }
+}
+
+/* Grid styles -------------------------------------------------*/
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 30px;
+}
+
+/* Generic styles ----------------------------------------------*/
+body {
+  font-family: "Quicksand", sans-serif;
+}
+
+.leading {
+  height: 240px;
+  margin-bottom: 30px;
+  padding: 30px;
+  color: white;
+  background: url("https://images.wallpaperscraft.com/image/single/laptop_keyboard_glow_170138_1920x1080.jpg")
+    center #333 no-repeat;
+  background-size: cover;
+  color: rgb(218, 150, 231);
+  text-shadow: 0px 0px 5px #000;
+}
+
+.leading-bigtext {
+  margin-right: 60px;
+  font-weight: bold;
+  font-size: 24vw;
+}
+
+@media (min-width: 700px) {
+  .leading-bigtext {
+    font-size: 140px;
+  }
+}
+
+.leading-text {
+  max-width: 900px;
+  font-size: 1.2em;
+  line-height: 1.4em;
+  color: aliceblue;
+}
+
+.cards {
+  max-width: 960px;
+  margin: 0 auto 30px;
+}
+
+article {
+  position: relative;
+}
+
+.article-img {
+  opacity: 1;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+  height: 200px;
+  width: 100%;
+  object-fit: contain;
+}
+
+.article-img:hover,
+img {
   opacity: 0.3;
 }
 
-.container:hover .middle {
+.article-img:hover .middle {
   opacity: 1;
 }
 
-.text {
-  background-color: #04AA6D;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
+.article-title {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 4px;
+  background-color: rgba(104, 8, 88, 0.2);
+  color: aliceblue;
 }
